@@ -230,6 +230,40 @@ lazy val core = (project in file("src"))
 
     unmanagedBase                := baseDirectory.value / ".." / "lib",
 
+    libraryDependencies          += "com.novocode" % "junit-interface" % "0.11" % "test",
+    testOptions                  += Tests.Argument(TestFrameworks.JUnit,
+                                      "-1",
+                                      "-v",
+                                      "-s",
+                                      "-a",
+//                                      "--run-listener=org.orbeon.junit.OrbeonJUnitRunListener",
+//                                      "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=61155",
+                                      "-Doxf.resources.factory=org.orbeon.oxf.resources.PriorityResourceManagerFactory",
+                                      "-Doxf.resources.priority.1=org.orbeon.oxf.resources.FilesystemResourceManagerFactory",
+                                      "-Doxf.resources.priority.1.oxf.resources.filesystem.sandbox-directory=src/test/resources",
+                                      "-Doxf.resources.priority.2=org.orbeon.oxf.resources.FilesystemResourceManagerFactory",
+                                      "-Doxf.resources.priority.2.oxf.resources.filesystem.sandbox-directory=src/resources",
+                                      "-Doxf.resources.priority.3=org.orbeon.oxf.resources.FilesystemResourceManagerFactory",
+                                      "-Doxf.resources.priority.3.oxf.resources.filesystem.sandbox-directory=src/resources-packaged",
+                                      "-Doxf.resources.priority.4=org.orbeon.oxf.resources.FilesystemResourceManagerFactory",
+                                      "-Doxf.resources.priority.4.oxf.resources.filesystem.sandbox-directory=src/main/resources",
+                                      "-Doxf.resources.priority.5=org.orbeon.oxf.resources.ClassLoaderResourceManagerFactory",
+                                      "-Doxf.resources.common.min-reload-interval=50",
+                                      "-Doxf.test.config=oxf:/ops/unit-tests/tests.xml",
+                                      "-Djava.io.tmpdir=build/temp/test",
+                                      // Some code uses the default time zone, which might different on different system, so we need to set it explicitly
+                                      "-Duser.timezone=America/Los_Angeles",
+                                      // Getting a JDK error, per http://stackoverflow.com/a/13575810/5295
+                                      "-Djava.util.Arrays.useLegacyMergeSort=true"
+                                    ),
+    testOptions                  += Tests.Filter(s ⇒ s.endsWith("Test") && ! s.contains("CombinedClientTest")),
+    parallelExecution in Test    := false,
+    fork              in Test    := true, // "By default, tests executed in a forked JVM are executed sequentially"
+    javaOptions       in Test    ++= Seq("-ea", "-server", "-Djava.awt.headless=true", "-Xms256m", "-Xmx1024m", "-XX:MaxPermSize=256m"),
+    baseDirectory     in Test    := baseDirectory.value / "..",
+
+//    libraryDependencies          += "com.lihaoyi" %% "pprint" % "0.4.1",
+
     // TODO: only src/main/resources/org/orbeon/oxf/xforms/script/coffee-script.js
     // http://www.scala-sbt.org/0.13/docs/Mapping-Files.html
     mappings          in (Compile, packageBin) ~= { _ filterNot { case (_, path) ⇒ PathsToExcludeFromCoreJAR.exists(path.startsWith) } }
